--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,19 @@
 layout: default
 ---
 
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
-<h1>{{ page.title }}</h1>
+<section class="post">
+  <div class="flex-row-between">
+    <a href="{{site.url}}/">« back</a>
+    <button id="theme-toggle" onclick="modeSwitcher()">
+        <div></div>
+    </button>
+  </div>
+  <h1 class="title">{{ page.title }}</h1>
+  <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time>
+  {{ content }}
+  <span class="meta">
+    {% for tag in page.tags %}
+    <a href="/tag/{{tag}}">{{tag}}</a>{% unless forloop.last %}, {% endunless %}{% endfor %}</span>
+</section>
 
-<p class="view">by {{ page.author | default: site.author }}</p>
 
-{{content}}
-
-{% if page.tags %}
-  <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
-{% endif %}
