--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
         <div></div>
     </button>
   </div>
-  <h1>{{site}}</h1>
+  <h1>{{site.url}}</h1>
   <h1 class="title">{{ page.title }}</h1>
   <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time>
   {{ content }}
